--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Hello I'm learning git branching</h1>
   <p>This is my feature branch!!!</p>
+  <img src="" alt="A beautiful sky">
 </body>
 </html>
